vlib/v/checker/tests/assign_generic_closure_fn_err.vv
struct Cmd[T] {
mut:
	val T
}

fn use_cmd[T](mut cmd Cmd[T]) {
	_ = cmd
}

fn main() {
	mut cmd := Cmd[string]{}
	anon := fn [mut cmd] [T]() {
		use_cmd(mut cmd)
	}
	anon()
}
